--- a/Tp1/src/users.html
+++ b/Tp1/src/users.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="theme.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Title</title>
 </head>
 <body>
     <div id="tableInformation">
-        <table style="width: 100%; ">
+        <table>
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
@@ -30,18 +31,18 @@
                 <td>Colugna</td>
                 <td>xx@yy.com</td>
                 <td>1153207654</td>
-                <td><img src="view.png"></td>
-                <td><img src="edit.png"></td>
-                <td><img src="delete.jpg"></td>
+                <td><img src="images/view.png"></td>
+                <td><img src="images/edit.png"></td>
+                <td><img src="images/delete.jpg"></td>
             </tr>
             <tr>
                 <td>Agustin</td>
                 <td>Lopez Gabeiras</td>
                 <td>yy@xx.com</td>
                 <td>1153207654</td>
-                <td><img src="view.png"></td>
-                <td><img src="edit.png"></td>
-                <td><img src="delete.jpg"></td>
+                <td><img src="images/view.png"></td>
+                <td><img src="images/edit.png"></td>
+                <td><img src="images/delete.jpg"></td>
             </tr>
 
         </table>
