--- a/Tp1/src/concepts.html
+++ b/Tp1/src/concepts.html
@@ -10,8 +10,9 @@
     <meta charset="UTF-8">
     <title>Practica 1: HTML </title>
 </head>
+
 <body>
-    <div id="head">
+    <div id="title-container">
         <h1>DIPOI</h1>
     </div>
 
@@ -158,7 +159,9 @@
        </div>
     </div>
 
-
+    <footer>
+        <h4>Nicole Fox</h4>
+    </footer>
 
 </body>
 </html>
