--- a/Tp1/src/users.html
+++ b/Tp1/src/users.html
@@ -4,89 +4,187 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="theme.css">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="Script.js"></script>
 
     <title>Title</title>
 </head>
 <body>
-    <div id="tableInformation">
-        <table>
+
+<dialog class="dialog" id="view-person-dialog">
+    <div class="dialog-form-container">
+        <div class="formFromUser">
+            <form class="user-form">
+                <div class="user-dialog">
+                    <div>
+                        <label class="form-section"> Usuario:</label><br>
+                        <label for="view-name">Nombre:</label><br>
+                        <input disabled type="text" id="view-name"><br>
+                        <label for="view-lastname">Apellido:</label><br>
+                        <input disabled type="text" id="view-lastname" name="view-lastname"><br>
+                        <label for="view-mail">Mail:</label><br>
+                        <input disabled type="text" id="view-mail" name="view-mail"><br>
+                        <label for="view-phone">Telefono:</label><br>
+                        <input disabled type="number" id="view-phone" name="view-phone"><br>
+                    </div>
+                    <div>
+                        <label class="form-section"> Direccion:</label><br>
+                        <label for="view-street">Calle:</label><br>
+                        <input disabled type="text" id="view-street"><br>
+                        <label for="view-prov">Provincia:</label><br>
+                        <input disabled type="text" id="view-prov" name="prov"><br>
+                        <label for="view-zipcode">Codigo posta:</label><br>
+                        <input disabled type="number" id="view-zipcode" name="zipcode"><br>
+                    </div>
+                    <div>
+                        <label class="form-section"> Otro:</label><br>
+                        <label for="view-birthday">Fecha de nacimiento:</label><br>
+                        <input disabled type="number" maxlength="10" id="view-birthday"><br>
+                        <label>Estado civil</label><br>
+                        <input disabled type="radio" id="view-single" name="civil-status">
+                        <label for="single">Soltero</label><br>
+                        <input disabled type="radio" id="view-married" name="civil-status">
+                        <label for="married">Casado</label><br>
+                        <input disabled type="radio" id="view-other" name="civil-status">
+                        <label for="other">otro</label><br><br>
+                    </div>
+                </div>
+                <input onclick="window['view-person-dialog'].close()" class="dialog-button" value="Cerrar"/>_
+
+
+            </form>
+
+
+        </div>
+    </div>
+</dialog>
+<dialog class="dialog" id="edit-person-dialog">
+    <div class="dialog-form-container">
+        <div class="formFromUser">
+            <form class="user-form">
+                <div class="user-dialog">
+                    <div>
+                        <label class="form-section"> Usuario:</label><br>
+                        <label for="edit-name">Nombre:</label><br>
+                        <input type="text" id="edit-name"><br>
+                        <label for="edit-lastname">Apellido:</label><br>
+                        <input type="text" id="edit-lastname" name="edit-lastname"><br>
+                        <label for="edit-mail">Mail:</label><br>
+                        <input type="text" id="edit-mail" name="edit-mail"><br>
+                        <label for="edit-phone">Telefono:</label><br>
+                        <input type="number" id="edit-phone" name="edit-phone"><br>
+                    </div>
+                    <div>
+                        <label class="form-section"> Direccion:</label><br>
+                        <label for="edit-street">Calle:</label><br>
+                        <input type="text" id="edit-street"><br>
+                        <label for="edit-prov">Provincia:</label><br>
+                        <input type="text" id="edit-prov" name="prov"><br>
+                        <label for="edit-zipcode">Codigo posta:</label><br>
+                        <input type="number" id="edit-zipcode" name="zipcode"><br>
+                    </div>
+                    <div>
+                        <label class="form-section"> Otro:</label><br>
+                        <label for="edit-birthday">Fecha de nacimiento:</label><br>
+                        <input type="number" maxlength="10" id="edit-birthday"><br>
+                        <label>Estado civil</label><br>
+                        <input disabled type="radio" id="edit-single" name="civil-status">
+                        <label for="single">Soltero</label><br>
+                        <input disabled type="radio" id="edit-married" name="civil-status">
+                        <label for="married">Casado</label><br>
+                        <input disabled type="radio" id="edit-other" name="civil-status">
+                        <label for="edit-other">otro</label><br>
+                        <label>Comentario</label>
+                    </div>
+                </div>
+                <div>
+                    <input type="reset" class="button" onclick="editPerson(event)" value="Editar persona">
+                    <input type="reset" class="button" onclick="window['edit-person-dialog'].close()" value="Cancelar">
+                </div>
+            </form>
+        </div>
+    </div>
+</dialog>
+<div id="form-container">
+    <div id="table-loader">
+        <table id="persons-table">
+            <thead>
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Mail</th>
                 <th>Phone</th>
-                <th colspan="3">Actions</th>
+                <th colspan="3">
+                    <div class="table-actions-row">Actions</div>
+                    <br>
+                    <span class="table-actions-column">View</span>
+                    <span class="table-actions-column">Edit</span>
+                    <span class="table-actions-column">Delete</span>
+                </th>
             </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <th>View</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            <tr>
-                <td>Pedro</td>
-                <td>Colugna</td>
-                <td>xx@yy.com</td>
-                <td>1153207654</td>
-                <td><img src="images/view.png"></td>
-                <td><img src="images/edit.png"></td>
-                <td><img src="images/delete.jpg"></td>
-            </tr>
-            <tr>
-                <td>Agustin</td>
-                <td>Lopez Gabeiras</td>
-                <td>yy@xx.com</td>
-                <td>1153207654</td>
-                <td><img src="images/view.png"></td>
-                <td><img src="images/edit.png"></td>
-                <td><img src="images/delete.jpg"></td>
-            </tr>
-
+            </thead>
+            <tbody id="person-information-table">
+            <!--<tr>-->
+            <!--<td>Pedro</td>-->
+            <!--<td>Colugna</td>-->
+            <!--<td>xx@yy.com</td>-->
+            <!--<td>1153207654</td>-->
+            <!--<td><img src="images/view.png"></td>-->
+            <!--<td><img src="images/edit.png"></td>-->
+            <!--<td><img src="images/delete.jpg"></td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<td>Agustin</td>-->
+            <!--<td>Lopez Gabeiras</td>-->
+            <!--<td>yy@xx.com</td>-->
+            <!--<td>1153207654</td>-->
+            <!--<td><img src="images/view.png"></td>-->
+            <!--<td><img src="images/edit.png"></td>-->
+            <!--<td><img src="images/delete.jpg"></td>-->
+            <!--</tr>-->
+            </tbody>
         </table>
     </div>
-
 
     <div id="formFromUser">
         <form>
             <br><br><br>
             <label class="form-section"> Usuario:</label><br>
-            <label for="fname">Nombre:</label><br>
-            <input type="text" id="fname"><br>
-            <label for="lname">Apellido:</label><br>
-            <input type="text" id="lname" name="lname"><br>
+            <label for="name">Nombre:</label><br>
+            <input type="text" id="name"><br>
+            <label for="lastname">Apellido:</label><br>
+            <input type="text" id="lastname" name="lastname"><br>
             <label for="mail">Mail:</label><br>
             <input type="text" id="mail" name="mail"><br>
             <label for="phone">Telefono:</label><br>
-            <input type="text" id="phone" name="phone"><br>
+            <input type="number" id="phone" name="phone"><br>
             <br><br>
             <label class="form-section"> Direccion:</label><br>
             <label for="street">Calle:</label><br>
             <input type="text" id="street"><br>
             <label for="prov">Provincia:</label><br>
             <input type="text" id="prov" name="prov"><br>
-            <label for="codigoPostal">Codigo posta:</label><br>
-            <input type="text" id="codigoPostal" name="codigoPostal"><br>
+            <label for="zipcode">Codigo posta:</label><br>
+            <input type="number" id="zipcode" name="zipcode"><br>
             <br><br>
             <label class="form-section"> Otro:</label><br>
-            <label for="birthDate">Fecha de nacimiento:</label><br>
-            <input type="text" maxlength="10" id="birthDate"><br>
-            <label >Estado civil</label><br>
-            <input type="radio" id="single" name="civilStatus">
+            <label for="birthday">Fecha de nacimiento:</label><br>
+            <input type="number" maxlength="10" id="birthday"><br>
+            <label>Estado civil</label><br>
+            <input type="radio" id="single" name="civil-status">
             <label for="single">Soltero</label><br>
-            <input type="radio" id="married" name="civilStatus">
+            <input type="radio" id="married" name="civil-status">
             <label for="married">Casado</label><br>
-            <input type="radio" id="other" name="civilStatus">
+            <input type="radio" id="other" name="civil-status">
             <label for="other">otro</label><br>
-            <label for="myfile">Elegir un archivo:</label>
+            <label for="myfile">Subir un archivo:</label>
             <input type="file" id="myfile" name="myfile"><br>
-            <label >Comentario</label><br>
+            <label>Comentario</label><br>
             <textarea></textarea><br><br>
-            <input type="submit" class="button" value="Enviar">
+            <input type="reset" class="button" onclick="createPerson(event)" value="Enviar">
             <input type="reset" class="button" value="Cancelar">
         </form>
     </div>
+</div>
+
 </body>
 </html>
